--- a/code/presentation/view/LoginView.form
+++ b/code/presentation/view/LoginView.form
@@ -24,7 +24,7 @@
           <text value="username"/>
         </properties>
       </component>
-      <component id="8e10e" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="8e10e" class="javax.swing.JTextField" binding="usernameField" default-binding="true">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -42,7 +42,7 @@
           <text value="password"/>
         </properties>
       </component>
-      <component id="7f08a" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+      <component id="7f08a" class="javax.swing.JPasswordField" binding="passwordField" default-binding="true">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
