--- a/code/presentation/view/GenerateReportForm.form
+++ b/code/presentation/view/GenerateReportForm.form
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="presentation.view.LoginView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="presentation.view.GenerateReportForm">
   <grid id="27dc6" binding="rootPanel" layout-manager="FormLayout">
     <rowspec value="center:d:noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:4dlu:noGrow"/>
+    <rowspec value="center:d:grow"/>
     <colspec value="fill:d:noGrow"/>
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:d:grow"/>
@@ -13,36 +15,38 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="none" title="Login"/>
+    <border type="none"/>
     <children>
-      <component id="a4e89" class="javax.swing.JLabel">
+      <component id="55712" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="username"/>
+          <text value="date from:"/>
         </properties>
       </component>
-      <component id="8e10e" class="javax.swing.JTextField" binding="usernameField" default-binding="true">
+      <component id="9fa99" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <forms/>
+        </constraints>
+        <properties>
+          <text value="date to:"/>
+        </properties>
+      </component>
+      <component id="c2334" class="javax.swing.JTextField" binding="dateFromField">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
-      </component>
-      <component id="368f1" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
         <properties>
-          <text value="password"/>
+          <text value=""/>
         </properties>
       </component>
-      <component id="7f08a" class="javax.swing.JPasswordField" binding="passwordField" default-binding="true">
+      <component id="63045" class="javax.swing.JTextField" binding="dateToField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -51,15 +55,29 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f6f78" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="cdbb4" class="javax.swing.JButton" binding="reportGenerate">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="Login"/>
+          <text value="Generate Report"/>
         </properties>
       </component>
+      <scrollpane id="2f85f">
+        <constraints>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <forms defaultalign-vert="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="4ec75" class="javax.swing.JList" binding="examList">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
