--- a/code/presentation/view/CourseFormView.form
+++ b/code/presentation/view/CourseFormView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="presentation.view.LoginView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="presentation.view.CourseFormView">
   <grid id="27dc6" binding="rootPanel" layout-manager="FormLayout">
     <rowspec value="center:d:noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
@@ -13,18 +13,18 @@
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
-    <border type="none" title="Login"/>
+    <border type="none"/>
     <children>
-      <component id="a4e89" class="javax.swing.JLabel">
+      <component id="c6c08" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="username"/>
+          <text value="Course name:"/>
         </properties>
       </component>
-      <component id="8e10e" class="javax.swing.JTextField" binding="usernameField" default-binding="true">
+      <component id="3244f" class="javax.swing.JTextField" binding="courseName">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -33,16 +33,16 @@
         </constraints>
         <properties/>
       </component>
-      <component id="368f1" class="javax.swing.JLabel">
+      <component id="6fe35" class="javax.swing.JLabel">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="password"/>
+          <text value="teacher username:"/>
         </properties>
       </component>
-      <component id="7f08a" class="javax.swing.JPasswordField" binding="passwordField" default-binding="true">
+      <component id="a3484" class="javax.swing.JTextField" binding="teacherUsernameField">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -51,13 +51,13 @@
         </constraints>
         <properties/>
       </component>
-      <component id="f6f78" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="7e527" class="javax.swing.JButton" binding="button">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
         <properties>
-          <text value="Login"/>
+          <text value="Button"/>
         </properties>
       </component>
     </children>
